--- a/Pymaceuticals/Pymaceuticals.ipynb
+++ b/Pymaceuticals/Pymaceuticals.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 236,
-   "id": "5cb1d19a",
+   "id": "9605c474",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 237,
-   "id": "808f6ba1",
+   "id": "a5411e35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "729e22f8",
+   "id": "3e4f3397",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 239,
-   "id": "737f3557",
+   "id": "3326f917",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 301,
-   "id": "d6942883",
+   "id": "147cf9d6",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 278,
-   "id": "165a2d30",
+   "id": "dc4cba17",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 303,
-   "id": "28a315bb",
+   "id": "ae787737",
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 312,
-   "id": "24d3a094",
+   "id": "142c9a05",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 313,
-   "id": "34340f64",
+   "id": "36b38662",
    "metadata": {},
    "outputs": [
     {
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 314,
-   "id": "61e79dad",
+   "id": "e4370f52",
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b9b7bbb",
+   "id": "8c391c07",
    "metadata": {},
    "source": [
     "# Summary Statistics"
@@ -940,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 246,
-   "id": "a23f92d5",
+   "id": "4153db43",
    "metadata": {},
    "outputs": [
     {
@@ -1119,7 +1119,7 @@
   {
    "cell_type": "code",
    "execution_count": 247,
-   "id": "4119e9f0",
+   "id": "ac55c793",
    "metadata": {},
    "outputs": [
     {
@@ -1274,7 +1274,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4edd5fbd",
+   "id": "5e1bda14",
    "metadata": {},
    "source": [
     "# Bar and Pie Charts"
@@ -1282,34 +1282,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
-   "id": "1e2f96b3",
+   "execution_count": 339,
+   "id": "0fb34de1",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "sort_values() got multiple values for argument 'axis'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_24620\\4285926365.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mtest_df\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroupby\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Drug Regimen\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Timepoint\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mtest_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0msorted_df\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtest_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Testpoint\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0msorted_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: sort_values() got multiple values for argument 'axis'"
-     ]
+     "data": {
+      "text/plain": [
+       "Drug Regimen\n",
+       "Capomulin    230\n",
+       "Ramicane     228\n",
+       "Ketapril     188\n",
+       "Naftisol     186\n",
+       "Zoniferol    182\n",
+       "Stelasyn     181\n",
+       "Placebo      181\n",
+       "Infubinol    178\n",
+       "Ceftamin     178\n",
+       "Propriva     148\n",
+       "Name: Timepoint, dtype: int64"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate a bar plot showing the total number of timepoints for all mice tested for each drug regimen using Pandas.\n",
     "test_df = df.groupby([\"Drug Regimen\"]).count()[\"Timepoint\"]\n",
     "test_df\n",
-    "sorted_df=test_df.sort_values(\"Testpoint\",axis=0,ascending=False)\n",
+    "sorted_df=test_df.sort_values(ascending=False)\n",
     "sorted_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
-   "id": "64eeb208",
+   "execution_count": 340,
+   "id": "a9d88eff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,8 +1330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
-   "id": "94561d28",
+   "execution_count": 341,
+   "id": "64de0680",
    "metadata": {},
    "outputs": [
     {
@@ -2126,7 +2136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59bde5ca",
+   "id": "2d4e88d7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2134,7 +2144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2c45b45",
+   "id": "7f7180a7",
    "metadata": {},
    "outputs": [],
    "source": []
