--- a/Pymaceuticals/Pymaceuticals.ipynb
+++ b/Pymaceuticals/Pymaceuticals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c30c2f58",
+   "id": "f3df536d",
    "metadata": {},
    "source": [
     "# Pymaceuticals Inc\n",
@@ -11,14 +11,15 @@
     "* 1.Capomulin and Ramicane drug treatments look effective compared to other drug regimens while comparing the average tumor volume on the course of 45 days.\n",
     "* 2.Number of Mice tested for Capomulin and Ramicane is more than the other drug regimens.\n",
     "* 3.Percentage of male mice tested is more than the female mice.\n",
-    "* 4.There are no outliers for Capomulin,Ramicane and Ceftamin except Infubinol which has one outlier.\n",
-    "* 5.There is a strong positive Correlation between Mouse weight and average tumor volume."
+    "* 4.As per the line plot,the tumor volume has reduced in the course of time for the mice l509 using the drug Capomulin\n",
+    "* 5.There are no outliers for Capomulin,Ramicane and Ceftamin except Infubinol which has one outlier.\n",
+    "* 6.There is a strong positive Correlation between Mouse weight and average tumor volume."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "621a47e3",
+   "id": "978bdcde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "34544af9",
+   "id": "b4f9b362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 134,
-   "id": "ace933bf",
+   "id": "7cde15ec",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "392ce62c",
+   "id": "5702ae96",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 136,
-   "id": "1e8a3c39",
+   "id": "a9ac34dd",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 137,
-   "id": "aca0ab5e",
+   "id": "b1cfb7c4",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "11d35857",
+   "id": "154b9ac3",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "caaad9a1",
+   "id": "12630410",
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "5b215ec3",
+   "id": "540bc02e",
    "metadata": {},
    "outputs": [
     {
@@ -845,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "id": "a2b411da",
+   "id": "465642ac",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8d08a2a",
+   "id": "8b980950",
    "metadata": {},
    "source": [
     "# Summary Statistics"
@@ -876,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 142,
-   "id": "9dac0af7",
+   "id": "0d56c295",
    "metadata": {},
    "outputs": [
     {
@@ -1057,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "64afb2d6",
+   "id": "d5e31b6e",
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7991eb4f",
+   "id": "da5ff8eb",
    "metadata": {},
    "source": [
     "# Bar and Pie Charts"
@@ -1220,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "f5dc4cfb",
+   "id": "729c82a8",
    "metadata": {
     "scrolled": true
    },
@@ -1258,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "19ccbc4b",
+   "id": "894768f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1271,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "9146359a",
+   "id": "6be07057",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "4d3fffdb",
+   "id": "4eb6c420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,7 +1323,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "5c042a2b",
+   "id": "44719cfc",
    "metadata": {},
    "outputs": [
     {
@@ -1355,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "1c45b281",
+   "id": "5524fcc7",
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1384,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "04f5d7f4",
+   "id": "0d16a197",
    "metadata": {
     "scrolled": false
    },
@@ -1410,7 +1411,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "b739f764",
+   "id": "e5830f94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "e209fe30",
+   "id": "0ba9fa30",
    "metadata": {},
    "outputs": [
     {
@@ -1461,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0ccabd9",
+   "id": "32502f12",
    "metadata": {},
    "source": [
     "# Quartiles, Outliers and Boxplots"
@@ -1470,7 +1471,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "5f48e29e",
+   "id": "5bd290ea",
    "metadata": {},
    "outputs": [
     {
@@ -1569,7 +1570,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "a28b39b5",
+   "id": "e6d4b13b",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1638,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "d9ece3b1",
+   "id": "8f1711e1",
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1667,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "6162b686",
+   "id": "4d1c83f4",
    "metadata": {},
    "outputs": [
     {
@@ -1811,7 +1812,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "dea1c571",
+   "id": "669535f0",
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "ec31861f",
+   "id": "f743fc3e",
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2069,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "9cbfd96e",
+   "id": "ecee17eb",
    "metadata": {},
    "outputs": [
     {
@@ -2296,7 +2297,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "67ffa1d8",
+   "id": "138958c5",
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2323,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1627890d",
+   "id": "d0264faf",
    "metadata": {},
    "source": [
     "# Correlation and Regression"
@@ -2331,7 +2332,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "226ee632",
+   "id": "dec1540f",
    "metadata": {},
    "outputs": [
     {
