--- a/Pymaceuticals/Pymaceuticals.ipynb
+++ b/Pymaceuticals/Pymaceuticals.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "201793b2",
+   "id": "23fc066c",
    "metadata": {},
    "source": [
     "# Pymaceuticals Inc\n",
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
-   "id": "7c2015f8",
+   "execution_count": 192,
+   "id": "4cfac4ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "66bbdd6e",
+   "execution_count": 193,
+   "id": "63bf6196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
-   "id": "6d959876",
+   "execution_count": 194,
+   "id": "bf8e29e3",
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "4     g791     Ramicane    Male          11          16"
       ]
      },
-     "execution_count": 164,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
-   "id": "a63067ce",
+   "execution_count": 195,
+   "id": "9dbf5c20",
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "4     c819          0                45.0                 0"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,8 +238,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
-   "id": "b3a98d84",
+   "execution_count": 196,
+   "id": "2bd092b8",
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
        "4    Male          21          25  "
       ]
      },
-     "execution_count": 166,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,8 +363,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
-   "id": "5ed5cf51",
+   "execution_count": 197,
+   "id": "362d526f",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "249"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -386,8 +386,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "id": "4de1999b",
+   "execution_count": 198,
+   "id": "e7258784",
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "array(['g989'], dtype=object)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,8 +412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "e7508999",
+   "execution_count": 199,
+   "id": "efb266ea",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 169,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,8 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
-   "id": "219e862b",
+   "execution_count": 200,
+   "id": "7631f056",
    "metadata": {},
    "outputs": [
     {
@@ -832,7 +832,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,8 +845,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
-   "id": "ad192235",
+   "execution_count": 201,
+   "id": "46fa0aa3",
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "248"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1f3fae3",
+   "id": "7c3479d9",
    "metadata": {},
    "source": [
     "# Summary Statistics"
@@ -876,8 +876,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
-   "id": "73067eb6",
+   "execution_count": 202,
+   "id": "ecfc2cfa",
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "Zoniferol                   6.966589                0.516398  "
       ]
      },
-     "execution_count": 172,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,8 +1057,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
-   "id": "ae6e7d0a",
+   "execution_count": 203,
+   "id": "7cfcfd5f",
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1197,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d319a9bf",
+   "id": "54786ccb",
    "metadata": {},
    "source": [
     "# Bar and Pie Charts"
@@ -1220,8 +1220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "id": "bafd53b6",
+   "execution_count": 204,
+   "id": "6283fa46",
    "metadata": {
     "scrolled": true
    },
@@ -1243,7 +1243,7 @@
        "Name: Timepoint, dtype: int64"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1258,8 +1258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
-   "id": "db7b9798",
+   "execution_count": 205,
+   "id": "f4ecc5c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,8 +1270,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
-   "id": "416fdf07",
+   "execution_count": 206,
+   "id": "e1ccd3da",
    "metadata": {},
    "outputs": [
     {
@@ -1309,8 +1309,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "id": "1486fbd7",
+   "execution_count": 207,
+   "id": "bc1fa796",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1322,8 +1322,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
-   "id": "4c7e2f9e",
+   "execution_count": 208,
+   "id": "f78dfe83",
    "metadata": {},
    "outputs": [
     {
@@ -1355,8 +1355,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "727f9c40",
+   "execution_count": 209,
+   "id": "3a8c70cd",
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
        "Name: Mouse ID, dtype: int64"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,8 +1383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
-   "id": "0fc48e02",
+   "execution_count": 210,
+   "id": "0f9d5359",
    "metadata": {
     "scrolled": false
    },
@@ -1410,8 +1410,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
-   "id": "0018b591",
+   "execution_count": 211,
+   "id": "e258b455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,8 +1427,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
-   "id": "5b56803c",
+   "execution_count": 212,
+   "id": "8c4bcd54",
    "metadata": {},
    "outputs": [
     {
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72a4d650",
+   "id": "f1aa4b26",
    "metadata": {},
    "source": [
     "# Quartiles, Outliers and Boxplots"
@@ -1470,8 +1470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
-   "id": "c8700c1f",
+   "execution_count": 213,
+   "id": "7f70ddfc",
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
        "4     a366     Stelasyn         30           63.440686"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1569,8 +1569,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "1666b82a",
+   "execution_count": 215,
+   "id": "bc495155",
    "metadata": {},
    "outputs": [
     {
@@ -1581,23 +1581,19 @@
       "Tumor Volume for Capomulin below 21.0 could be outliers.\n",
       "Tumor Volume for Capomulin above 52.0 could be outliers.\n",
       "Capomulin's potential outliers:  Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Number of outliers for Capomulin is 0\n",
       "Ramicane\n",
       "Tumor Volume for Ramicane below 18.0 could be outliers.\n",
       "Tumor Volume for Ramicane above 54.0 could be outliers.\n",
       "Ramicane's potential outliers:  Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Number of outliers for Ramicane is 0\n",
       "Infubinol\n",
       "Tumor Volume for Infubinol below 37.0 could be outliers.\n",
       "Tumor Volume for Infubinol above 83.0 could be outliers.\n",
-      "Infubinol's potential outliers:  31    36.0\n",
+      "Infubinol's potential outliers:  31    36.321346\n",
       "Name: Tumor Volume (mm3), dtype: float64\n",
-      "Number of outliers for Infubinol is 1\n",
       "Ceftamin\n",
       "Tumor Volume for Ceftamin below 25.0 could be outliers.\n",
       "Tumor Volume for Ceftamin above 88.0 could be outliers.\n",
-      "Ceftamin's potential outliers:  Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Number of outliers for Ceftamin is 0\n"
+      "Ceftamin's potential outliers:  Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
      ]
     }
    ],
@@ -1631,14 +1627,13 @@
     "    \n",
     "# Determine outliers using upper and lower bounds   \n",
     "    outliers = final_tumor_vol.loc[(final_tumor_vol < lower_bound)|(final_tumor_vol > upper_bound)]\n",
-    "    print(f\"{value}'s potential outliers:  {round(outliers)}\")\n",
-    "    print(f\"Number of outliers for {value} is {outliers.count()}\")    "
+    "    print(f\"{value}'s potential outliers:  {(outliers)}\")   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 185,
-   "id": "9dbe0c03",
+   "id": "0f972300",
    "metadata": {},
    "outputs": [
     {
@@ -1667,7 +1662,7 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "id": "18693650",
+   "id": "5f9ecf60",
    "metadata": {},
    "outputs": [
     {
@@ -1812,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "d3fa16ce",
+   "id": "d6bac4f1",
    "metadata": {},
    "outputs": [
     {
@@ -1840,7 +1835,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "92868df8",
+   "id": "fb3d1af9",
    "metadata": {},
    "outputs": [
     {
@@ -2069,7 +2064,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "9c41699f",
+   "id": "4f0434c2",
    "metadata": {},
    "outputs": [
     {
@@ -2297,7 +2292,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "43cc31b7",
+   "id": "d3c9ea1a",
    "metadata": {},
    "outputs": [
     {
@@ -2323,7 +2318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ecdacc",
+   "id": "46b95414",
    "metadata": {},
    "source": [
     "# Correlation and Regression"
@@ -2332,7 +2327,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "693560cd",
+   "id": "feaf845c",
    "metadata": {},
    "outputs": [
     {
@@ -2378,7 +2373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9421c8",
+   "id": "f4709e94",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2386,7 +2381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b564a55d",
+   "id": "c5b97468",
    "metadata": {},
    "outputs": [],
    "source": []
